--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Victoria's Journal</title>
   
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&family=Raleway:wght@300;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="task4.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="outer-frame">
