--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 My favorite cartoon character is cookie, and my favorite dessert is cupcakes. So Cookie Cupcakes are best of both the worlds. Did you know? Cookie character once said, "Sometimes me think what is love, and then me think love is what cookie is for."
               </p>
 
-              <img class="entry-img right" src="C:\task4\cupcake.png" alt="cupcakes thumbnail">
+              <img class="entry-img right" src="C:\Users\Saleem Shahid\Documents\GitHub\html" alt="cupcakes thumbnail">
             </div>
           </article>
         </main>
