--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 Yesterday, I went to the store and got some much needed spatulas! (what better way to say I love myself than to buy myself a spatula?)
               </p>
 
-              <img  src="https://media.istockphoto.com/id/469254062/photo/metal-spatula.jpg?s=612x612&w=0&k=20&c=ya956SWkKhfFSpvIbtZh0v3U35lkoZPjoszO3WeA9fM=">
+              <img  src="https://tse2.mm.bing.net/th/id/OIP.UOLeEeqz8asrMA0tScpQCQHaFg?rs=1&pid=ImgDetMain&o=7&rm=3">
             </div>
           </article>
 
@@ -54,7 +54,7 @@
                 My favorite cartoon character is cookie, and my favorite dessert is cupcakes. So Cookie Cupcakes are best of both the worlds. Did you know? Cookie character once said, "Sometimes me think what is love, and then me think love is what cookie is for."
               </p>
 
-              <img class="entry-img right" src="C:\Users\Saleem Shahid\Documents\GitHub\html" alt="cupcakes thumbnail">
+              <img class="entry-img right" src="https://tse2.mm.bing.net/th/id/OIP.pun4j_ui-iP0BSVvl6RpVwHaLH?rs=1&pid=ImgDetMain&o=7&rm=3">
             </div>
           </article>
         </main>
